// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with Leonardo_da_Vinci 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          Leonardo da Vinci
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with Mona_Lisa 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          Mona Lisa
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with New_York_City 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          New York City
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with Pet_door 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          Pet door
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with Renaissance 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          Renaissance
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`renders correctly with The_Last_Supper_(Leonardo) 1`] = `
Array [
  <div
    className="menu-wrapper"
  >
    <div
      className="menu"
    >
      <div
        className="menu__logo"
      >
        <span
          className="logo-wiki"
        >
          Wiki
        </span>
        <span
          className="logo-pedia"
        >
          pedia
        </span>
        <span
          className="logo-icon"
        >
          W
        </span>
      </div>
      <div
        className="menu__search"
      >
        <div
          className="menu__search-icon"
        >
          <test-file-stub />
        </div>
        <input
          className="menu__search-input"
          placeholder="Search Wikipedia"
          type="text"
        />
      </div>
      <div
        className="menu__main"
      >
        <button
          className="menu__button"
        >
          VIEW SOURCE
        </button>
        <button
          className="menu__button"
          id="theme-switch"
        >
          LIGHT MODE
        </button>
        <button
          className="menu__button menu__icon"
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
  <div
    className="css-1lqxkvd-SkeletonTheme"
  >
    <div
      className="article"
    >
      <div
        className="hero"
      >
        <div
          className="hero__title"
        >
          The Last Supper (Leonardo)
        </div>
        <div
          className="hero__credit"
        >
          From Wikipedia, the free encyclopedia
        </div>
        <div
          className="wiki-content"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
  <div
    className="navigation-wrapper"
  >
    <div
      className="navigation"
    >
      <div
        className="navigation__content"
      >
        <button
          className="navigation__button navigation__left-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
        <div
          className="navigation__headings"
        />
        <button
          className="navigation__button navigation__right-button"
          onClick={[Function]}
        >
          <test-file-stub />
        </button>
      </div>
    </div>
  </div>,
]
`;
